--- a/react/src/style.css
+++ b/react/src/style.css
@@ -3,7 +3,7 @@
   flex-flow:column;
   justify-content: center;
   align-items: center;
-  margin: 10px auto;
+  margin: 0 auto;
 }
 
 .input-area_section {
